--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kira AI - Asistente de IA Inteligente</title>
-    <link rel="icon" type="image/png" href="V1.png">
+    <link rel="icon" type="image/png" href="kira-logo.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
@@ -65,7 +65,7 @@
     <header class="fixed top-0 w-full bg-white/90 backdrop-blur-md z-50 border-b border-gray-100">
         <nav class="container mx-auto px-4 py-4 flex items-center justify-between">
             <div class="flex items-center space-x-3">
-                <img src="V1.png" alt="Kira AI Logo" class="w-10 h-10 animate-float">
+                <img src="kira-logo.svg" alt="Kira AI Logo" class="w-10 h-10 animate-float">
                 <h1 class="text-xl font-semibold gradient-text">Kira AI</h1>
             </div>
             <a href="#chat" class="bg-gray-900 text-white px-6 py-2 rounded-full text-sm font-medium hover:bg-gray-800 transition-all duration-300 transform hover:scale-105">
@@ -281,7 +281,7 @@
     <footer class="bg-gray-900 text-white py-12 px-4">
         <div class="container mx-auto max-w-4xl text-center">
             <div class="flex items-center justify-center space-x-3 mb-6">
-                <img src="V1.png" alt="Kira AI Logo" class="w-8 h-8">
+                <img src="kira-logo.svg" alt="Kira AI Logo" class="w-8 h-8">
                 <h3 class="text-xl font-semibold">Kira AI</h3>
             </div>
             <p class="text-gray-400 mb-6">
@@ -341,4 +341,5 @@
 
     </script>
 </body>
+
 </html> 
