--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kira AI - Chat</title>
-    <link rel="icon" type="image/png" href="V1.png">
+    <link rel="icon" type="image/png" href="kira-logo.png">
     <style>
         * {
             margin: 0;
@@ -29,10 +29,11 @@
 </head>
 <body>
     <iframe
-        src="https://www.chatbase.co/chatbot-iframe/saljZc-LmGasaTaJlh3XC"
+        src="https://www.chatbase.co/saljZc-LmGasaTaJlh3XC/help"
         width="100%"
         style="height: 100%; min-height: 700px"
         frameborder="0"
     ></iframe>
 </body>
+
 </html> 
