--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <img src="kira-logo.png" alt="Kira AI Logo" class="w-10 h-10 animate-float">
                 <h1 class="text-xl font-semibold gradient-text">Kira AI</h1>
             </div>
-            <a href="#chat" class="bg-gray-900 text-white px-6 py-2 rounded-full text-sm font-medium hover:bg-gray-800 transition-all duration-300 transform hover:scale-105">
+            <a href="chat.html" class="bg-gray-900 text-white px-6 py-2 rounded-full text-sm font-medium hover:bg-gray-800 transition-all duration-300 transform hover:scale-105">
                 Probar Ahora
             </a>
         </nav>
@@ -85,7 +85,7 @@
                     Tu asistente de IA inteligente basado en la tecnología más avanzada de OpenAI GPT-4
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                    <a href="#chat" class="bg-gray-900 text-white px-8 py-4 rounded-full text-lg font-medium hover:bg-gray-800 transition-all duration-300 transform hover:scale-105 shadow-lg">
+                    <a href="chat.html" class="bg-gray-900 text-white px-8 py-4 rounded-full text-lg font-medium hover:bg-gray-800 transition-all duration-300 transform hover:scale-105 shadow-lg">
                         Comenzar Conversación
                     </a>
                     <a href="#features" class="border-2 border-gray-300 text-gray-700 px-8 py-4 rounded-full text-lg font-medium hover:border-gray-400 transition-all duration-300">
@@ -117,7 +117,7 @@
                     </div>
                     <h3 class="text-xl font-semibold mb-4">Inteligencia Avanzada</h3>
                     <p class="text-gray-600 mb-6">Potenciado por GPT-4, Kira AI comprende el contexto y proporciona respuestas precisas y útiles para cualquier consulta.</p>
-                    <a href="#chat" class="text-blue-600 font-medium hover:text-blue-700 transition-colors">
+                    <a href="chat.html" class="text-blue-600 font-medium hover:text-blue-700 transition-colors">
                         Probar IA →
                     </a>
                 </div>
@@ -130,7 +130,7 @@
                     </div>
                     <h3 class="text-xl font-semibold mb-4">Respuesta Instantánea</h3>
                     <p class="text-gray-600 mb-6">Obtén respuestas inmediatas a tus preguntas. Kira AI está disponible 24/7 para ayudarte cuando lo necesites.</p>
-                    <a href="#chat" class="text-green-600 font-medium hover:text-green-700 transition-colors">
+                    <a href="chat.html" class="text-green-600 font-medium hover:text-green-700 transition-colors">
                         Conversar Ahora →
                     </a>
                 </div>
@@ -143,7 +143,7 @@
                     </div>
                     <h3 class="text-xl font-semibold mb-4">Conversación Natural</h3>
                     <p class="text-gray-600 mb-6">Interactúa de forma natural y fluida. Kira AI entiende el lenguaje humano y mantiene conversaciones coherentes.</p>
-                    <a href="#chat" class="text-purple-600 font-medium hover:text-purple-700 transition-colors">
+                    <a href="chat.html" class="text-purple-600 font-medium hover:text-purple-700 transition-colors">
                         Iniciar Chat →
                     </a>
                 </div>
@@ -184,38 +184,8 @@
             </div>
 
             <div class="text-center mt-12">
-                <a href="#chat" class="bg-gray-900 text-white px-8 py-4 rounded-full text-lg font-medium hover:bg-gray-800 transition-all duration-300 transform hover:scale-105 shadow-lg">
-                    ¡Comenzar Ahora!
-                </a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Chat Demo Section -->
-    <section id="chat" class="py-16 px-4 bg-gray-50">
-        <div class="container mx-auto max-w-4xl">
-            <div class="text-center mb-12 animate-slide-up">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4 gradient-text">
-                    ¿Listo para conversar?
-                </h2>
-                <p class="text-xl text-gray-600 mb-8">
-                    Experimenta la potencia de Kira AI en acción
-                </p>
-            </div>
-
-            <div class="animate-slide-up">
-                <iframe
-                    src="https://www.chatbase.co/chatbot-iframe/saljZc-LmGasaTaJlh3XC"
-                    width="100%"
-                    style="height: 100%; min-height: 700px; border-radius: 16px; box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);"
-                    frameborder="0"
-                ></iframe>
-            </div>
-
-            <div class="text-center mt-8">
-                <p class="text-gray-600 mb-4">¡El chat está listo para usar! Interactúa directamente con Kira AI arriba</p>
                 <a href="chat.html" class="bg-gray-900 text-white px-8 py-4 rounded-full text-lg font-medium hover:bg-gray-800 transition-all duration-300 transform hover:scale-105 shadow-lg">
-                    Probar el chatbot
+                    ¡Comenzar Ahora!
                 </a>
             </div>
         </div>
@@ -343,4 +313,5 @@
 </body>
 
 </html> 
+
 
